# neuralis_terminal

./: AGENTS.md  README.md  openclaw_gui_design_spec.md  pyproject.toml
docs/: gateway_notes.md
neuralis_terminal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openclaw_gui/: __init__.py  main.py
openclaw_gui/app/: __init__.py
openclaw_gui/app/controllers/: app_controller.py  personality_controller.py  project_controller.py  session_controller.py
openclaw_gui/app/gateway/: __init__.py  gateway_adapter.py  gateway_client.py  gateway_discovery.py  gateway_errors.py  gateway_models.py  websocket_rpc.py
openclaw_gui/app/models/: __init__.py  event.py  personality.py  project.py  session.py  settings.py  status_message.py
openclaw_gui/app/persistence/: __init__.py  db.py  file_store.py  repositories.py
openclaw_gui/app/services/: __init__.py  export_service.py  restore_service.py  status_message_bus.py  summary_service.py
openclaw_gui/app/ui/: main_window.py
openclaw_gui/app/ui/dialogs/: __init__.py  personality_manager_dialog.py  project_manager_dialog.py  session_history_dialog.py  settings_dialog.py
openclaw_gui/app/ui/widgets/: __init__.py  session_view.py  status_messages_panel.py  status_strip.py  top_bar.py
tests/: conftest.py  test_file_store.py  test_gateway_client.py  test_main.py  test_main_window_ui.py  test_management_dialogs.py  test_repositories.py  test_restore_service.py  test_session_controller.py  test_settings.py  test_status_strip.py  test_top_bar.py  test_websocket_rpc.py
