[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralis-terminal"
version = "0.1.0"
description = "Desktop control cockpit for OpenClaw sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["openclaw_gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
